examples/test/testpolicy9262.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: policy9262
  namespace: namespace376
spec:
  podSelector:
    matchLabels:
      key28: value9
      key7: value24
  policyTypes:
  ingress:
  - from:
    - namespaceSelector:
        matchLabels:
          key30: value43
          key34: value11
      podSelector:
        matchLabels:
          key22: value40
